# Engine

./: .gitignore  CMakeLists.txt  README.md
engine/include/: Engine.h
engine/src/: Engine.cpp
game/: main.cpp
